Changed doc Prepare to release